--- a/Pengiriman.rdlc
+++ b/Pengiriman.rdlc
@@ -35,7 +35,7 @@
         </Field>
         <Field Name="RowNumber">
           <DataField>RowNumber</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
+          <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
